--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">Mar 28, 2023 08:14 pm</p>
+      <p class="date">Mar 29, 2023 09:56 am</p>
     </div>
   </div>
   
@@ -176,8 +176,8 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="preface" class="level1 unnumbered">
 <h1 class="unnumbered">Preface</h1>
-<p>Here find a brief introduction, in written and video format, to data analysis. I believe it is reasonable to claim that the subsequent material is at the very least one of the most efficient introductions to data analysis that exists. For a relatively small investment of time you gain an introduction to some of the same tools used by data scientists.</p>
-<p>Although the following guidance for doing basic analyses is free from programming, consisting only of simple function calls, it introduces analysis in the context of one of the most popular languages of data science: R. Specifically, the guidance presented here focuses on using my <code>lessR</code> package, part of the R ecosystem.</p>
+<p>Here find a brief written and video introduction to computer software for doing data analysis. For a relatively small investment of time you gain an introduction to some of the same tools used by data scientists as they analyze data. And all for free.</p>
+<p>Although the following guidance for doing basic analyses does not involve programming, consisting only of simple function calls, it introduces analysis in the context of one of the most popular languages of data science: R. Specifically, the guidance presented here focuses on using my <code>lessR</code> package, part of the R ecosystem.</p>
 <p>The following content includes both written and video instruction. Also, as you progress through this material, you will encounter some numbered lines of R instructions labeled <strong>Example</strong>, which appear as follows.</p>
 <div class="example">
 <p><span id="exm:eg" class="example"><strong>Example 0.1 </strong></span>R stuff</p>
