--- a/02-Data.html
+++ b/02-Data.html
@@ -239,7 +239,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <section id="dt" class="level2" data-number="2.1">
 <h2 data-number="2.1" class="anchored" data-anchor-id="dt"><span class="header-section-number">2.1</span> Data Table</h2>
 <p><span class="newthought">Data analysis begins with, well, data.</span> Analyze the data values for at least one variable, such as the company’s employee annual salaries. Organize the data values into a specific kind of structure from which analysis proceeds. To use any data analysis system such as R, <em>organize the data values into a table</em>.</p>
-<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/Data/0_ntiet07l" target="_blank" rel="noopener">Data Table</a> [4:05]</p>
+<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_m8m47ktp" target="_blank" rel="noopener">Data Table</a> [3:24]</p>
 <blockquote class="blockquote">
 <p><dfn>Data table</dfn>: Organize data values into a rectangular data table with the name of each variable at the top of a column followed by its data values in the remainder of the column.</p>
 </blockquote>
