--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">Mar 29, 2023 09:56 am</p>
+      <p class="date">Mar 29, 2023 09:39 pm</p>
     </div>
   </div>
   
