--- a/01-Intro.html
+++ b/01-Intro.html
@@ -438,7 +438,7 @@ Separate your data from the code
 <p><span class="newthought">From the cloud, access R with a web browser on any computing device</span>, such as a Chromebook or an iPad.</p>
 <section id="the-cloud" class="level4" data-number="1.2.2.1">
 <h4 data-number="1.2.2.1" class="anchored" data-anchor-id="the-cloud"><span class="header-section-number">1.2.2.1</span> The Cloud</h4>
-<p>The cloud refers to a computer but not the one on your desk.</p>
+<p>The cloud refers to a computer but not the one on your desk or your lap.</p>
 <blockquote class="blockquote">
 <p><dfn>The cloud</dfn>: One or more computer servers, usually in locations unknown to the users, that run applications accessed via a standard web browser.</p>
 </blockquote>
