--- a/03-Visualization.html
+++ b/03-Visualization.html
@@ -440,7 +440,7 @@ A bar chart from a summary table
 </div>
 </div>
 <p>For a single variable, the pie chart presents an alternative visualization of the data provided by the bar chart. As with the bar chart, in <code>lessR</code> you can create the pie chart interactively by entering <code>interact("PieChart")</code> into the R console. <a href="#fig-ring">Figure&nbsp;<span>3.5</span></a> displays the pie chart in the form of a doughnut or ring chart.</p>
-<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/PieChart/1_birzasjy" target="_blank" rel="noopener noreferrer">Pie Chart of Counts</a> [1:26]</p>
+<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_y7g58dxa" target="_blank" rel="noopener noreferrer">Pie Chart of Counts</a> [1:23]</p>
 <div id="exm-ring" class="theorem example">
 <p><span class="theorem-title"><strong>Example 3.3 </strong></span>&nbsp;</p>
 </div>
@@ -569,7 +569,7 @@ A bar chart from a summary table
 <div class="cell-output-display">
 <div id="fig-parameters" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="images/Parameters.png" class="img-fluid figure-img" style="width:60.0%"></p>
+<p><img src="images/Parameters.png" class="img-fluid figure-img" style="width:56.0%"></p>
 <p></p><figcaption class="figure-caption">Figure&nbsp;3.11: A parameter and its value in a function call.</figcaption><p></p>
 </figure>
 </div>
