--- a/02-Data.html
+++ b/02-Data.html
@@ -244,12 +244,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p><dfn>Data table</dfn>: Organize data values into a rectangular data table with the name of each variable at the top of a column followed by its data values in the remainder of the column.</p>
 </blockquote>
 <p>Store the structured data values within a computer file located on your computer, an accessible local network, or the world wide web. Encode the data table in one of a variety of computer file formats. The formats we encounter are Excel files, indicated by a file type of <code>.xlsx</code>, and text files in the form of comma-separated value files (csv). Identify a text file with one of several potential file types, such as <code>.txt</code>, but usually <code>.csv</code>.</p>
-<p>The data table in <a href="#fig-dataTable">Figure&nbsp;<span>2.1</span></a>, formatted as an Excel file, contains four variables: <em>Years</em>, <em>Gender</em>, <em>Dept</em>, and <em>Salary</em> plus an ID field called <em>Name</em> for a total of five columns. <a href="#fig-dataTable">Figure&nbsp;<span>2.1</span></a> displays data values for these variables for just the first six employees.</p>
+<p>The Excel data table in <a href="#fig-dataTable">Figure&nbsp;<span>2.1</span></a> contains four variables: <em>Years</em>, <em>Gender</em>, <em>Dept</em>, and <em>Salary</em>, plus an ID field called <em>Name</em>, for a total of five columns. <a href="#fig-dataTable">Figure&nbsp;<span>2.1</span></a> displays their data values for the first six employees.</p>
 <div class="cell" data-layout-align="center" data-fig.asp="0.7">
 <div class="cell-output-display">
 <div id="fig-dataTable" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="images/DataTable.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="images/DataTable.png" class="img-fluid figure-img" style="width:78.0%"></p>
 <p></p><figcaption class="figure-caption">Figure&nbsp;2.1: Structure of a data table.</figcaption><p></p>
 </figure>
 </div>
