--- a/04-MoreStuff.html
+++ b/04-MoreStuff.html
@@ -281,7 +281,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Dec 31, 2025 11:53 am</p>
+        <p class="date">Dec 31, 2025 05:12 pm</p>
       </div>
     </div>
     
@@ -383,7 +383,7 @@ ul.task-list li input[type="checkbox"] {
 <h3 data-number="4.1.1" class="anchored" data-anchor-id="figures"><span class="header-section-number">4.1.1</span> Copy and Paste</h3>
 <p><span class="newthought"></span> For the first technique, manually construct a word processing document, such as for a homework assignment. Copy and paste text and graphics output from R into the MS Word or other word processing app document.</p>
 <p><em>Text</em>: All input and output to the R Console, with or without RStudio, is pure text. Select and copy the desired output and paste into MS Word or, for example, an email (no screenshot). Display the text in a <em>mono-spaced font</em>, such as Courier New. First, this lines up the columns of tables, and second, this distinguishes computer output in your writing from words that you write yourself, such as interpretative text.</p>
-<p><em>Visualizations</em>: For RStudio use the <code>Export</code> button at the top of the window pane for <code>Plots</code>. Then select <code>Copy to Clipboard</code> and paste into the app such Word. Generally, re-size the image to better fit on the page, shown in <a href="#fig-image" class="quarto-xref">Figure&nbsp;<span class="quarto-unresolved-ref">fig-image</span></a>.</p>
+<p><em>Visualizations</em>: For RStudio use the <code>Export</code> button at the top of the window pane for <code>Plots</code>. Then select <code>Copy to Clipboard</code> and paste into the app such Word. Generally, re-size the image to better fit on the page, shown in <a href="#fig-image" class="quarto-xref">Figure&nbsp;<span>4.1</span></a>.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
 <div id="fig-image" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
@@ -403,7 +403,7 @@ Figure&nbsp;4.1: Export an image from RStudio.
 <section id="compile-a-report" class="level3" data-number="4.1.2">
 <h3 data-number="4.1.2" class="anchored" data-anchor-id="compile-a-report"><span class="header-section-number">4.1.2</span> Compile a Report</h3>
 <p><span class="newthought">Save R input instructions in a text file and run as a single unit with output to MS Word.</span> From the <code>File --&gt; New File --&gt; R</code> <code>Script</code> menu sequence create a new file and save. Or, start with the <code>+</code> sign at the top-left corner of the RStudio window to create the new text file. Then enter the R instructions into the text file window pane.</p>
-<p>From the window pane, run the code with the <code>Run</code> button at the top-right of the window-pane for the file, shown in <a href="#fig-TextFileMenu" class="quarto-xref">Figure&nbsp;<span class="quarto-unresolved-ref">fig-TextFileMenu</span></a>. Or, even better, click on the <code>Compile Report</code> button. Then choose MS Word as the output medium.</p>
+<p>From the window pane, run the code with the <code>Run</code> button at the top-right of the window-pane for the file, shown in <a href="#fig-TextFileMenu" class="quarto-xref">Figure&nbsp;<span>4.2</span></a>. Or, even better, click on the <code>Compile Report</code> button. Then choose MS Word as the output medium.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
 <div id="fig-TextFileMenu" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
@@ -433,7 +433,7 @@ Figure&nbsp;4.2: Compile Report and Run buttons on the toolbar of the RStudio te
 <h2 data-number="4.2" class="anchored" data-anchor-id="miscellaneous"><span class="header-section-number">4.2</span> Miscellaneous</h2>
 <section id="vig" class="level3" data-number="4.2.1">
 <h3 data-number="4.2.1" class="anchored" data-anchor-id="vig"><span class="header-section-number">4.2.1</span> Get Help</h3>
-<p><span class="newthought">Get Help.</span> <code>lessR</code> contains several documented sets of examples, called vignettes, each of which explains how to do a specified analysis. Access the vignettes with the R function call <code>browseVignettes("lessR")</code>. The output is shown in <a href="#fig-vig" class="quarto-xref">Figure&nbsp;<span class="quarto-unresolved-ref">fig-vig</span></a>, which opens on a web page. Click on an <code>HTML</code> link for a given vignette to view its web page.</p>
+<p><span class="newthought">Get Help.</span> <code>lessR</code> contains several documented sets of examples, called vignettes, each of which explains how to do a specified analysis. Access the vignettes with the R function call <code>browseVignettes("lessR")</code>. The output is shown in <a href="#fig-vig" class="quarto-xref">Figure&nbsp;<span>4.3</span></a>, which opens on a web page. Click on an <code>HTML</code> link for a given vignette to view its web page.</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
 <div id="fig-vig" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
