--- a/references.html
+++ b/references.html
@@ -299,7 +299,7 @@ div.csl-indent {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Dec 31, 2025 11:53 am</p>
+        <p class="date">Dec 31, 2025 05:15 pm</p>
       </div>
     </div>
     
@@ -377,8 +377,29 @@ div.csl-indent {
 
 
 
-<div id="refs" role="list">
-
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-medium_bc" class="csl-entry" role="listitem">
+Gerbing, David. 2019. <span>“Easy, Engaging Bar Charts from Simple to
+Sophisticated.”</span> <em>Medium.com</em>. <a href="&quot;https://towardsdatascience.com/easy-bar-charts-from-simple-to-sophisticated-7270c03eced8?source=friends_link&amp;sk=0a724c1bb0317fc494ae80fa0ae7b58b&quot;">"https://towardsdatascience.com/easy-bar-charts-from-simple-to-sophisticated-7270c03eced8?source=friends_link&amp;sk=0a724c1bb0317fc494ae80fa0ae7b58b"</a>.
+</div>
+<div id="ref-rdv" class="csl-entry" role="listitem">
+———. 2020. <em>R Visualizations: Derive Meaning from Data</em>. CRC
+Press.
+</div>
+<div id="ref-GerbR" class="csl-entry" role="listitem">
+———. 2021. <span>“Enhancement of the Command-Line Environment for Use in
+the Introductory Statistics Course and Beyond.”</span> <em>Journal of
+Statistics and Data Science Education</em> 29 (3): 251–66. <a href="https://doi.org/10.1080/26939169.2021.1999871">https://doi.org/10.1080/26939169.2021.1999871</a>.
+</div>
+<div id="ref-gerbing23" class="csl-entry" role="listitem">
+———. 2023. <em>R Data Analysis Without Programming: Explanation and
+Interpretation</em>. 2nd ed. Routledge Publishing.
+</div>
+<div id="ref-R" class="csl-entry" role="listitem">
+R Core Team. 2025. <em>R: A Language and Environment for Statistical
+Computing</em>. Vienna, Austria: R Foundation for Statistical Computing.
+<a href="https://www.R-project.org/">https://www.R-project.org/</a>.
+</div>
 </div>
 
 
