--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Dec 31, 2025 11:52 am</p>
+        <p class="date">Dec 31, 2025 05:12 pm</p>
       </div>
     </div>
     
