--- a/03-Visualization.html
+++ b/03-Visualization.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="David Gerbing">
 
-<title>3&nbsp; Visualize the Data – Introduction to Data Analysis</title>
+<title>3&nbsp; Visualize – Introduction to Data Analysis</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -335,7 +335,7 @@ window.Quarto = {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./03-Visualization.html"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize the Data</span></a></li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./03-Visualization.html"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize</span></a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -348,7 +348,7 @@ window.Quarto = {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-body">
-      <h1 class="title"><span id="sec-count" class="quarto-section-identifier"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize the Data</span></span></h1>
+      <h1 class="title"><span id="sec-count" class="quarto-section-identifier"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize</span></span></h1>
                       </div>
   </div>
     
@@ -365,7 +365,7 @@ window.Quarto = {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Dec 31, 2025 05:20 pm</p>
+        <p class="date">Jan 6, 2026 11:14 am</p>
       </div>
     </div>
     
@@ -400,7 +400,7 @@ window.Quarto = {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./01-Intro.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Introduction to R</span></span></a>
+ <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">R</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -412,13 +412,13 @@ window.Quarto = {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./03-Visualization.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize the Data</span></span></a>
+ <span class="menu-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Visualize</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./04-MoreStuff.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">More Stuff</span></span></a>
+ <span class="menu-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">More</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -573,7 +573,7 @@ Figure&nbsp;3.1: Instruction to create a bar chart of the counts of each categor
 </div>
 </div>
 <p>To illustrate, return to the <a href="#dt">data</a> in <a href="02-Data.html#fig-dataTable" class="quarto-xref">Figure&nbsp;<span>2.1</span></a>. First, <a href="02-Data.html#location">read</a> the data into R as the <em>d</em> data frame. Given the data, tabulate and display the number of employees in each department, according to the variable named Dept. The values of <em>Dept</em> are in the default data frame (table) named <em>d</em>. The result is the bar chart in <a href="#fig-bc1" class="quarto-xref">Figure&nbsp;<span>3.2</span></a> for the distribution of the values of the categorical variable <em>Dept</em>.</p>
-<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_2g07bs6q" target="_blank" rel="noopener noreferrer">Bar Chart of Counts</a> [3:08]</p>
+<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_0n0enp69" target="_blank" rel="noopener noreferrer">Chart of Counts</a>, an interactive bar chart, pie chart, and more [3:11]</p>
 <div id="exm-bc" class="theorem example">
 <p><span class="theorem-title"><strong>Example 3.1</strong></span> &nbsp;</p>
 </div>
@@ -721,7 +721,6 @@ Figure&nbsp;3.4: Instruction to generate a pie (ring) chart of the counts of eac
 </figure>
 </div>
 <p><a href="#fig-ring" class="quarto-xref">Figure&nbsp;<span>3.5</span></a> displays the pie chart in the form of a doughnut or ring chart.</p>
-<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_y7g58dxa" target="_blank" rel="noopener noreferrer">Pie Chart of Counts</a> [1:23]</p>
 <div id="exm-ring" class="theorem example">
 <p><span class="theorem-title"><strong>Example 3.3</strong></span> &nbsp;</p>
 </div>
@@ -827,7 +826,7 @@ Figure&nbsp;3.7: Instruction to generate a histogram of the counts for each bin 
 </figure>
 </div>
 <p>As an example, consider the variable Salary in the <em>d</em> data frame, read from the data table illustrated in <a href="02-Data.html#fig-dataTable" class="quarto-xref">Figure&nbsp;<span>2.1</span></a>. Find the histogram in <a href="#fig-hs1" class="quarto-xref">Figure&nbsp;<span>3.8</span></a>.</p>
-<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/Histogram/1_sa3nq4zo" target="_blank" rel="noopener noreferrer">Histogram</a> [2:39]</p>
+<p><span class="vid">Video</span>: <a href="https://media.pdx.edu/media/t/1_p6r9xci2" target="_blank" rel="noopener noreferrer">Histogram</a> [3:36]</p>
 <div id="exm-hs" class="theorem example">
 <p><span class="theorem-title"><strong>Example 3.5</strong></span> &nbsp;</p>
 </div>
@@ -1400,8 +1399,8 @@ Gerbing, David. 2019. <span>“Easy, Engaging Bar Charts from Simple to Sophisti
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./04-MoreStuff.html" class="pagination-link" aria-label="More Stuff">
-        <span class="nav-page-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">More Stuff</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="./04-MoreStuff.html" class="pagination-link" aria-label="More">
+        <span class="nav-page-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">More</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
