--- a/02-Data.html
+++ b/02-Data.html
@@ -316,7 +316,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Jan 6, 2026 11:14 am</p>
+        <p class="date">Jan 7, 2026 05:52 pm</p>
       </div>
     </div>
     
