--- a/04-MoreStuff.html
+++ b/04-MoreStuff.html
@@ -281,7 +281,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Jan 6, 2026 11:14 am</p>
+        <p class="date">Jan 7, 2026 05:52 pm</p>
       </div>
     </div>
     
